tests/negative/NotARecord.juvix
module NotARecord;

type T := t;

f : T := t @T{x := 1};
